--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -4,5 +4,5 @@
     font-size: 32px;
     color:white;
     font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
